--- a/overlay/packages/apps/Phone/res/values/config.xml
+++ b/overlay/packages/apps/Phone/res/values/config.xml
@@ -19,6 +19,6 @@
 
     <!-- Flag indicating if the tty is enabled -->
     <bool name="tty_enabled">true</bool>
-    <!-- <bool name="sprint_mwi_quirk">true</bool> -->
+    <bool name="sprint_mwi_quirk">true</bool>
 
 </resources>
