more DeviceSettings stuff
Change-Id: I3c1c5717b388025abd161712bf6f374c8e55d667

--- a/DeviceSettings/res/xml/sensors_preferences.xml
+++ b/DeviceSettings/res/xml/sensors_preferences.xml
@@ -7,6 +7,7 @@
                 android:key="use_gyro_calibration"
                 android:title="@string/use_gyro_calibration_title_head"
                 android:summary="@string/use_gyro_calibration_summary_head"
+                android:defaultValue="true"
                 />
 
     <!-- Do gyro calibration -->
@@ -24,6 +25,7 @@
                 android:key="touchkey_light"
                 android:title="@string/touchkey_light_title_head"
                 android:summary="@string/touchkey_light_summary_head"
+                android:defaultValue="true"
                 />
     </PreferenceCategory>
 </PreferenceScreen>
