add noise suppression
Change-Id: I120095c1a0e77036cb3a71f1c5f057dfa8530f12

--- a/overlay/packages/apps/Phone/res/values/config.xml
+++ b/overlay/packages/apps/Phone/res/values/config.xml
@@ -21,4 +21,10 @@
     <bool name="tty_enabled">true</bool>
     <bool name="sprint_mwi_quirk">true</bool>
 
+    <!-- Determines if device implements a noise suppression device for in call audio-->
+    <bool name="has_in_call_noise_suppression">true</bool>
+
+    <!-- Audio parameter for settings noise suppression-->
+    <string name="in_call_noise_suppression_audioparameter">dualmic_enabled=true=false</string>
+
 </resources>
