--- a/DeviceSettings/res/values-de/arrays.xml
+++ b/DeviceSettings/res/values-de/arrays.xml
@@ -50,10 +50,14 @@
         <item>100%</item>
     </string-array>
 
-    <string-array name="hspa_entries">
-	    <item>Nur UMTS</item>
-	    <item>Nur HSDPA</item>
-	    <item>HSDPA + HSUPA</item>
+    <string-array name="touchkey_timeout_entries">
+            <item>Niemals</item>
+            <item>1 Sekunde</item>
+            <item>2 Sekunden</item>
+            <item>3 Sekunden (Standard)</item>
+            <item>4 Sekunden</item>
+            <item>5 Sekunden</item>
+            <item>6 Sekunden</item>
     </string-array>
 
 </resources>
