--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -45,8 +45,8 @@
     <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
     <bool name="config_intrusiveNotificationLed">true</bool>
 	
-    <!-- Is the battery LED intrusive? Used to decide if there should be a disable option -->
-    <bool name="config_intrusiveBatteryLed">true</bool>
+    <!-- Is the battery LED intrusive? Used to decide if there should be a disable option
+    <bool name="config_intrusiveBatteryLed">true</bool>  -->
 	
     <!-- Default value for LED off time when the battery is low on charge in miliseconds -->
     <integer name="config_notificationsBatteryLedOff">14500</integer>
@@ -152,7 +152,7 @@
         <item>"mobile_dun,4,0,3,60000,true"</item>
         <item>"mobile_hipri,5,0,3,60000,true"</item>
         <item>"mobile_bluetooth,7,7,1,-1,true"</item>
-		<item>"wimax,6,6,1,60000,true"</item>
+	<item>"wimax,6,6,1,60000,true"</item>
         <item>"wifi_p2p,13,1,0,-1,true"</item>
     </string-array>
 
@@ -162,7 +162,7 @@
     <string-array translatable="false" name="radioAttributes">
         <item>"1,1"</item>
         <item>"0,1"</item>
-		<item>"6,1"</item>
+	<item>"6,1"</item>
         <item>"7,1"</item>
     </string-array>
 
@@ -201,7 +201,7 @@
     <integer-array translatable="false" name="config_tether_upstream_types">
         <item>0</item> <!-- TYPE_MOBILE -->
         <item>1</item> <!-- TYPE_WIFI -->
-		<item>6</item> <!-- TYPE_WIMAX -->
+	<item>6</item> <!-- TYPE_WIMAX -->
         <item>7</item> <!-- TYPE_BLUETOOTH -->
     </integer-array>
 	
@@ -220,11 +220,6 @@
     <!-- Set to true if the RSSI should always display CDMA signal
          strength even on EVDO -->
     <bool name="config_alwaysUseCdmaRssi">true</bool>
-
-    <!-- LUN file to be used by legacy USB manager.
-         The existence of this file will be used to determine in the
-         legacy USB manager should be started. -->
-    <string name="config_legacyUmsLunFile">/sys/class/android_usb/f_mass_storage/lun0/file</string>
 	
     <!-- If this value is true, The mms content-disposition field is supported correctly. If false, Content-disposition fragments are ignored -->
     <bool name="config_mms_content_disposition_support">false</bool>
@@ -243,19 +238,10 @@
     <!-- The VoiceMail default value is displayed to my own number if it is true -->
     <bool name="config_telephony_use_own_number_for_voicemail">true</bool>
 
-    <!-- Component name of the service providing network location support. -->
-    <string name="config_networkLocationProvider">com.google.android.location.NetworkLocationProvider</string>
-
-    <!-- Component name of the service providing geocoder API support. -->
-    <string name="config_geocodeProvider">com.google.android.location.GeocodeProvider</string>
-
-    <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
-    <bool name="config_intrusiveNotificationLed">true</bool>
-
     <!-- Vibrator pattern for feedback about touching a virtual key -->
     <integer-array name="config_virtualKeyVibePattern">
         <item>10</item>
-		<item>30</item>
+	<item>30</item>
     </integer-array>
 
     <!-- Allow the menu hard key to be disabled in LockScreen on some devices -->
