--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -54,4 +54,6 @@
         <value>148</value>
         <value>55</value>
     </array>
+  <!-- This is the battery capacity in mAh -->
+  <item name="battery.capacity">1800</item>
 </device>
